added video size calculation; separated 'pop filechooser' button from drag-and-drop targets; added video size text fields